--- a/frontend/pages/admin/buat_tagihan.html
+++ b/frontend/pages/admin/buat_tagihan.html
@@ -17,29 +17,33 @@
       <div class="relative bg-slate-700 w-full h-[275px]">
         <a
           href="/frontend/pages/admin/dashboard.html"
-          class="absolute top-8 left-16 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
+          class="absolute top-8 xl:left-16 left-8 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
           >Kembali</a
         >
         <div
-          class="container max-w-3xl absolute left-1/2 -translate-x-1/2 translate-y-1/2 -bottom-42 bg-slate-100 px-8 py-6 rounded-lg shadow-lg"
+          class="container xl:max-w-3xl w-[96%] absolute left-1/2 -translate-x-1/2 translate-y-3/4 -bottom-16 bg-slate-100 px-8 py-6 rounded-lg shadow-lg"
         >
           <div class="w-full">
-            <h1 class="text-slate-700 font-semibold text-2xl capitalize">
+            <h1
+              class="text-slate-700 font-semibold xl:text-2xl text-lg capitalize"
+            >
               buat tagihan
             </h1>
 
             <a
               href="/frontend/pages/admin/buat_tagihan_semua.html"
-              class="flex items-center gap-6 text-slate-100 bg-slate-700 px-4 py-5 rounded-lg my-4 cursor-pointer transition-all duration-150 hover:bg-slate-500"
+              class="flex items-center gap-6 text-slate-100 bg-slate-700 xl:px-4 px-6 py-5 rounded-lg my-4 cursor-pointer transition-all duration-150 hover:bg-slate-500"
             >
-              <i class="fa-solid fa-cash-register text-5xl"></i>
+              <i class="fa-solid fa-cash-register xl:text-5xl text-4xl"></i>
 
               <div class="w-3/4">
-                <h1 class="font-semibold text-s capitalize">
+                <h1 class="font-semibold xl:text-md text-xs capitalize">
                   buat tagihan untuk semua siswa
                 </h1>
 
-                <p class="font-normal text-slate-300 text-xs">
+                <p
+                  class="font-normal text-slate-300 xl:text-xs text-[9px] mt-1 xl:mt-0"
+                >
                   buat tagihan ke semua siswa hanya dengan satu kali klik disini
                 </p>
               </div>
@@ -55,8 +59,8 @@
           </div>
           <div>
             <form id="form-buat-tagihan">
-              <div class="flex flex-col space-y-4">
-                <div class="flex flex-col space-y-2 w-1/2">
+              <div class="flex flex-col space-y-4 w-full">
+                <div class="flex flex-col space-y-2 w-full">
                   <label for="nama">Nama</label>
                   <select
                     name="nama"
@@ -69,7 +73,7 @@
                   </select>
                 </div>
 
-                <div class="flex flex-col space-y-2 w-1/2">
+                <div class="flex flex-col space-y-2 w-full">
                   <label for="kelas">Kelas</label>
                   <select
                     name="kelas"
@@ -78,7 +82,7 @@
                   ></select>
                 </div>
 
-                <div class="flex flex-col space-y-2 w-1/2">
+                <div class="flex flex-col space-y-2 w-full">
                   <div class="flex gap-4 items-center justify-start">
                     <label for="jumlah-tagihan">Jumlah Tagihan :</label>
                     <span
@@ -88,14 +92,14 @@
                     >
                   </div>
                   <input
-                    type="text"
+                    type="number"
                     name="jumlah-tagihan"
                     id="jumlah-tagihan-siswa"
                     class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
                   />
                 </div>
 
-                <div class="flex flex-col space-y-2 w-1/2">
+                <div class="flex flex-col space-y-2 w-full">
                   <label for="opsi-rekening">Rekening Tujuan</label>
                   <select
                     name="opsi-rekening"
@@ -108,16 +112,21 @@
                   </select>
                 </div>
 
-                <div class="flex flex-col space-y-2 w-1/4">
+                <div class="flex flex-col space-y-2 xl:w-1/4 w-1/2">
                   <label for="deadline-tagihan">Deadline Tagihan</label>
 
-                  <input
-                    type="text"
-                    name="deadline-tagihan"
-                    id="deadline-tagihan-siswa"
-                    class="border-none outline-none py-2 bg-slate-100 text-slate-700 rounded-md px-3 shadow-md placeholder:text-sm"
-                    placeholder="Masukkan Deadline"
-                  />
+                  <div class="flex items-center gap-3">
+                    <i
+                      class="fa-solid fa-calendar-days text-3xl text-slate-700"
+                    ></i>
+                    <input
+                      type="text"
+                      name="deadline-tagihan"
+                      id="deadline-tagihan-siswa"
+                      class="outline-none py-2 bg-slate-100 text-slate-700 rounded-md px-3 shadow-lg border-2 border-slate-600/75 placeholder:text-sm"
+                      placeholder="Masukkan Deadline"
+                    />
+                  </div>
                 </div>
 
                 <div class="flex flex-col space-y-2 w-full">
@@ -144,6 +153,7 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="/frontend/logic/buatTagihan.js"></script>
   </body>
 </html>
