--- a/frontend/pages/admin/buat_tagihan_semua.html
+++ b/frontend/pages/admin/buat_tagihan_semua.html
@@ -18,20 +18,22 @@
       <div class="relative bg-slate-700 w-full h-[275px]">
         <a
           href="/frontend/pages/admin/buat_tagihan.html"
-          class="absolute top-8 left-16 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
+          class="absolute top-8 left-6 xl:left-16 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
           >Kembali</a
         >
         <div
-          class="container max-w-3xl absolute left-1/2 -translate-x-1/2 translate-y-1/2 -bottom-14 bg-slate-100 px-8 py-6 rounded-lg shadow-lg"
+          class="container xl:max-w-3xl w-[96%] absolute left-1/2 -translate-x-1/2 translate-y-1/2 -bottom-36 xl:-bottom-42 bg-slate-100 px-8 py-6 rounded-lg shadow-lg"
         >
-          <h1 class="text-slate-700 font-semibold text-2xl capitalize mb-4">
+          <h1
+            class="text-slate-700 font-semibold text-md xl:text-2xl capitalize mb-4"
+          >
             buat untuk tagihan semua siswa
           </h1>
 
           <div>
             <form id="form-buat-semua-tagihan">
               <div class="flex flex-col space-y-4">
-                <div class="flex flex-col space-y-2 w-1/2">
+                <div class="flex flex-col space-y-2 w-full">
                   <label for="kelas">Kelas</label>
                   <select
                     name="kelas"
@@ -40,7 +42,7 @@
                   ></select>
                 </div>
 
-                <div class="flex flex-col space-y-2 w-1/2">
+                <div class="flex flex-col space-y-2 w-full">
                   <label for="opsi-rekening">Opsi Rekening</label>
                   <select
                     name="opsi-rekening"
@@ -59,7 +61,7 @@
                     >
                   </div>
                   <input
-                    type="text"
+                    type="number"
                     class="p-3 outline-none bg-slate-300 text-slate-700 rounded-md"
                     name="jumlah-tagihan"
                     id="jumlah-tagihan"
@@ -67,16 +69,21 @@
                   />
                 </div>
 
-                <div class="flex flex-col space-y-2 w-1/4">
+                <div class="flex flex-col space-y-2 w-1/2">
                   <label for="deadline-tagihan">Deadline Tagihan</label>
 
-                  <input
-                    type="text"
-                    name="deadline-tagihan"
-                    id="deadline-tagihan-siswa"
-                    class="border-none outline-none py-2 bg-slate-100 text-slate-700 rounded-md px-3 shadow-md placeholder:text-sm"
-                    placeholder="Masukkan Deadline"
-                  />
+                  <div class="flex items-center gap-3">
+                    <i
+                      class="fa-solid fa-calendar-days text-3xl text-slate-700"
+                    ></i>
+                    <input
+                      type="text"
+                      name="deadline-tagihan"
+                      id="deadline-tagihan-siswa"
+                      class="border-none outline-none py-2 bg-slate-100 text-slate-700 rounded-md px-3 shadow-md placeholder:text-sm"
+                      placeholder="Masukkan Deadline"
+                    />
+                  </div>
                 </div>
 
                 <div class="flex flex-col space-y-2 w-full">
@@ -103,6 +110,7 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="/frontend/logic/buatSemuaTagihan.js"></script>
   </body>
 </html>
