--- a/frontend/pages/admin/dashboard.html
+++ b/frontend/pages/admin/dashboard.html
@@ -11,10 +11,10 @@
     <div class="min-h-screen">
       <div class="container mx-auto bg-slate-50">
         <!-- header -->
-        <div class="flex justify-between items-center py-3 px-4">
+        <div class="relative flex justify-between items-center py-3 px-4">
           <!-- logo -->
           <div class="flex gap-2 items-center justify-center">
-            <div class="size-16 overflow-hidden">
+            <div class="xl:size-16 size-14 overflow-hidden">
               <img
                 class="block object-cover size-full"
                 src="/frontend/public/img/smawa-logo-transparent.png"
@@ -22,7 +22,8 @@
               />
             </div>
 
-            <span class="font-semibold text-slate-700 text-md capitalize"
+            <span
+              class="xl:font-semibold font-medium text-xs text-slate-700 xl:text-lg capitalize"
               >sma wahidiyah lumajang</span
             >
           </div>
@@ -30,56 +31,95 @@
 
           <!-- nav -->
           <nav>
-            <ul class="flex gap-4">
+            <ul class="flex gap-4 items-center">
               <li class="cursor-pointer">
                 <a
                   href="/frontend/pages/admin/masterData.html"
-                  class="rounded-md bg-slate-900 p-2 text-slate-100 flex justify-center items-center px-4 py-3 flex justify-evenly items-center gap-2 hover:bg-slate-700"
+                  class="rounded-md bg-slate-900 xl:p-2 text-slate-100 xl:px-4 px-3 py-3 flex justify-evenly items-center gap-2 hover:bg-slate-700"
                 >
-                  <i class="fa-solid fa-database text-lg"></i>
-                  <span class="text-xs font-medium text-slate-200"
+                  <i class="fa-solid fa-database xl:text-lg text-sm"></i>
+                  <span
+                    class="text-xs xl:font-medium font-normal text-slate-200"
                     >Halaman Master Data</span
                   >
                 </a>
               </li>
               <li class="cursor-pointer">
-                <div
-                  class="size-10 rounded-full bg-slate-900 p-2 text-slate-100 flex justify-center items-center"
+                <button
+                  id="about-user"
+                  type="button"
+                  class="size-10 rounded-full bg-slate-900 p-2 text-slate-100 flex justify-center items-center cursor-pointer"
                 >
                   <i class="fa-solid fa-user text-lg"></i>
-                </div>
+                </button>
               </li>
             </ul>
           </nav>
           <!-- nav end -->
+
+          <!-- About User | Logout Section -->
+          <div class="absolute right-0 top-20 size-fit overflow-hidden">
+            <div
+              id="logout-section"
+              class="w-52 rounded-sm shadow bg-slate-200 overflow-hidden transition-all duration-500 px-6 py-2 pt-8 -translate-y-52"
+            >
+              <div class="flex flex-col gap-y-2 items-center">
+                <div class="size-14 rounded-full overflow-hidden shadow">
+                  <img
+                    class="block size-full object-cover"
+                    src="/frontend/public/img/default-profile.jpeg"
+                    alt="Admin"
+                  />
+                </div>
+
+                <h1 id="admin-name" class="font-medium text-lg text-slate-700">
+                  Admin
+                </h1>
+              </div>
+
+              <hr class="border-b border-slate-300 mt-3" />
+
+              <div class="mt-4">
+                <button
+                  id="logout"
+                  type="button"
+                  class="block mx-auto px-4 py-1 rounded-md border-2 border-red-500 text-red-500 font-medium w-full transition-all duration-150 hover:border-slate-100 hover:bg-red-500 hover:text-slate-100"
+                >
+                  Logout
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- header end -->
 
-        <div class="mx-12 my-6">
+        <div class="xl:mx-12 mx-6 xl:my-6 my-4">
           <h1 class="capitalize font-semibold text-slate-600 text-xl">
             dashboard admin
           </h1>
         </div>
 
         <div
-          class="max-w-8/12 h-[300px] bg-slate-100 grid justify-stretch grid-cols-2 grid-rows-2 gap-4 mx-auto my-8"
+          class="xl:max-w-8/12 max-w-9/12 h-[300px] bg-slate-100 grid justify-stretch xl:grid-cols-2 xl:grid-rows-2 auto-rows-auto gap-4 mx-auto my-8"
         >
           <a
             href="/frontend/pages/admin/tambah_siswa.html"
-            class="flex justify-center items-center bg-[#16C47F] rounded-md shadow-md cursor-pointer transition-all duration-150 hover:bg-slate-400 hover:scale-[98.5%]"
+            class="flex justify-center items-center bg-[#16C47F] rounded-md shadow-md cursor-pointer transition-all duration-150 hover:bg-slate-400 hover:scale-[98.5%] py-4 px-1 xl:p-0"
           >
             <div class="max-w-3/4 flex items-center gap-4">
               <div class="text-center text-slate-100 size-fit">
-                <i class="fa-solid fa-user-plus text-[65px]"></i>
+                <i class="fa-solid fa-user-plus xl:text-[65px] text-[50px]"></i>
               </div>
 
               <div
-                class="flex flex-col justify-center items-start gap-1 max-w-3/4"
+                class="flex flex-col justify-center items-start gap-1 xl:max-w-3/4 max-w-full w-full"
               >
-                <h1 class="font-semibold text-slate-100 text-lg">
+                <h1 class="font-semibold text-slate-100 xl:text-lg text-sm">
                   Tambah Siswa
                 </h1>
-                <p class="font-normal text-slate-200 text-xs capitalize">
+                <p
+                  class="font-normal text-slate-200 xl:text-xs text-[9px] capitalize"
+                >
                   ada siswa yang belum terdaftar di kelas ? ayo segera tambahkan
                   siswa itu lewat sini!
                 </p>
@@ -89,20 +129,24 @@
 
           <a
             href="/frontend/pages/admin/buat_tagihan.html"
-            class="flex justify-center items-center bg-[#16C47F] rounded-md shadow-md cursor-pointer transition-all duration-150 hover:bg-slate-400 hover:scale-[98.5%]"
+            class="flex justify-center items-center bg-[#16C47F] rounded-md shadow-md cursor-pointer transition-all duration-150 hover:bg-slate-400 hover:scale-[98.5%] py-4 px-1 xl:p-0"
           >
             <div class="max-w-3/4 flex items-center gap-4">
               <div class="text-center text-slate-100 size-fit">
-                <i class="fa-solid fa-money-bill text-[65px]"></i>
+                <i
+                  class="fa-solid fa-money-bill xl:text-[65px] text-[50px]"
+                ></i>
               </div>
 
               <div
-                class="flex flex-col justify-center items-start gap-1 max-w-3/4"
+                class="flex flex-col justify-center items-start gap-1 xl:max-w-3/4 max-w-full w-full"
               >
-                <h1 class="font-semibold text-slate-100 text-lg">
+                <h1 class="font-semibold text-slate-100 xl:text-lg text-sm">
                   Buat Tagihan
                 </h1>
-                <p class="font-normal text-slate-100 text-xs capitalize">
+                <p
+                  class="font-normal text-slate-200 xl:text-xs text-[9px] capitalize"
+                >
                   ingin membuat tagihan pembayaran ke semua siswa dengan sekali
                   tekan ? anda bisa melakukan itu lewat sini!
                 </p>
@@ -112,20 +156,22 @@
 
           <a
             href="/frontend/pages/admin/pantau_siswa.html"
-            class="flex justify-center items-center bg-[#16C47F] rounded-md shadow-md cursor-pointer transition-all duration-150 hover:bg-slate-400 hover:scale-[98.5%]"
+            class="flex justify-center items-center bg-[#16C47F] rounded-md shadow-md cursor-pointer transition-all duration-150 hover:bg-slate-400 hover:scale-[98.5%] py-4 px-1 xl:p-0"
           >
             <div class="max-w-3/4 flex items-center gap-4">
               <div class="text-center text-slate-100 size-fit">
-                <i class="fa-solid fa-users text-[65px]"></i>
+                <i class="fa-solid fa-users xl:text-[65px] text-[50px]"></i>
               </div>
 
               <div
-                class="flex flex-col justify-center items-start gap-1 max-w-3/4"
+                class="flex flex-col justify-center items-start gap-1 xl:max-w-3/4 max-w-full w-full"
               >
-                <h1 class="font-semibold text-slate-100 text-lg">
+                <h1 class="font-semibold text-slate-100 xl:text-lg text-sm">
                   Pantau Pembayaran Siswa
                 </h1>
-                <p class="font-normal text-slate-100 text-xs capitalize">
+                <p
+                  class="font-normal text-slate-200 xl:text-xs text-[9px] capitalize"
+                >
                   ayo pantau pembayaran siswa dari kelas 10 sampai kelas 12, dan
                   lihat riwayat pembayaran disini!
                 </p>
@@ -134,20 +180,24 @@
           </a>
           <a
             href="/frontend/pages/admin/nomorRekening.html"
-            class="flex justify-center items-center bg-[#16C47F] rounded-md shadow-md cursor-pointer transition-all duration-150 hover:bg-slate-400 hover:scale-[98.5%]"
+            class="flex justify-center items-center bg-[#16C47F] rounded-md shadow-md cursor-pointer transition-all duration-150 hover:bg-slate-400 hover:scale-[98.5%] py-4 px-1 xl:p-0"
           >
             <div class="max-w-3/4 flex items-center gap-4">
               <div class="text-center text-slate-100 size-fit">
-                <i class="fa-solid fa-credit-card text-[65px]"></i>
+                <i
+                  class="fa-solid fa-credit-card xl:text-[65px] text-[50px]"
+                ></i>
               </div>
 
               <div
-                class="flex flex-col justify-center items-start gap-1 max-w-3/4"
+                class="flex flex-col justify-center items-start gap-1 xl:max-w-3/4 max-w-full w-full"
               >
-                <h1 class="font-semibold text-slate-100 text-lg">
+                <h1 class="font-semibold text-slate-100 xl:text-lg text-sm">
                   Nomor Rekening
                 </h1>
-                <p class="font-normal text-slate-100 text-xs capitalize">
+                <p
+                  class="font-normal text-slate-200 xl:text-xs text-[9px] capitalize"
+                >
                   anda bisa menambahkan, mengubah, menghapus nomor rekening
                   untuk keperluan pembayaran siswa disini!
                 </p>
@@ -157,27 +207,33 @@
         </div>
 
         <div
-          class="overflow-x-auto max-w-11/12 mx-auto my-10 rounded-l-lg rounded-r-lg shadow-md"
+          class="overflow-x-auto xl:max-w-9/12 max-w-[90%] mx-auto my-10 xl:mt-0 mt-56 rounded-l-lg rounded-r-lg shadow-md"
         >
+          <div
+            class="flex items-center gap-4 text-slate-600 bg-slate-200 w-fit px-5 py-2 rounded-lg shadow my-4"
+          >
+            <i class="fa-solid fa-database text-2xl"></i>
+            <h1 class="font-medium text-md">Data Siswa Terkini</h1>
+          </div>
           <table class="table-auto min-w-full bg-white">
             <thead>
               <tr class="bg-[#16C47F] text-slate-100">
                 <th class="py-4 px-4 border-b text-left">Nama</th>
-                <th class="py-4 px-4 border-b text-left">Kelas</th>
-                <th class="py-4 px-4 border-b text-left">Email</th>
-                <th class="py-4 px-4 border-b text-left">Nomor HP</th>
-                <th class="py-4 px-4 border-b text-center">
-                  Status Pembayaran
-                </th>
+                <th class="py-4 px-4 border-b text-center">Kelas</th>
+                <th class="py-4 px-4 border-b text-center">Tapel</th>
+                <th class="py-4 px-4 border-b text-center">Nominal Tagihan</th>
+                <th class="py-4 px-4 border-b text-center">Tagihan Dibuat</th>
               </tr>
             </thead>
             <tbody>
-              <tr class="cursor-pointer hover:bg-gray-100">
-                <td class="flex items-center gap-4 py-4 px-4 border-b">
+              <!-- <tr class="cursor-pointer hover:bg-gray-100">
+                <td
+                  class="flex items-center gap-2 py-4 px-1 border-b xl:w-auto min-w-36 max-w-56"
+                >
                   <div class="size-8 rounded-full overflow-hidden">
                     <img
                       class="block size-full object-cover"
-                      src="/frontend/public/img/Profile-IG.jpg"
+                      src="/frontend/public/img/default-profile.jpeg"
                       alt="user"
                     />
                   </div>
@@ -185,100 +241,35 @@
                     >John Doe</span
                   >
                 </td>
+
                 <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
+                  class="py-4 px-4 border-b text-sm font-semibold text-center text-slate-500"
                 >
-                  XII IPA 1
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                >
-                  john.doe@example.com
+                  XII-1
                 </td>
                 <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
+                  class="py-4 px-4 border-b text-sm font-semibold text-center text-slate-500"
                 >
-                  081234567890
+                  2024/2025
                 </td>
                 <td
-                  class="py-4 px-4 border-b text-center text-md font-semibold text-slate-500"
+                  class="py-4 px-4 border-b text-sm font-semibold text-center text-slate-500"
                 >
-                  Lunas
-                </td>
-              </tr>
-              <tr class="cursor-pointer hover:bg-gray-100">
-                <td class="flex items-center gap-4 py-4 px-4 border-b">
-                  <div class="size-8 rounded-full overflow-hidden">
-                    <img
-                      class="block size-full object-cover"
-                      src="/frontend/public/img/Profile-IG.jpg"
-                      alt="user"
-                    />
-                  </div>
-                  <span class="text-[14px] font-semibold text-slate-600"
-                    >John Doe</span
-                  >
+                  Rp.10.000
                 </td>
                 <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
+                  class="py-4 px-4 border-b text-sm font-semibold text-center text-slate-500"
                 >
-                  XII IPA 1
+                  Kamis, 20 April 92131
                 </td>
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                >
-                  john.doe@example.com
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                >
-                  081234567890
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-center text-md font-semibold text-slate-500"
-                >
-                  Lunas
-                </td>
-              </tr>
-              <tr class="cursor-pointer hover:bg-gray-100">
-                <td class="flex items-center gap-4 py-4 px-4 border-b">
-                  <div class="size-8 rounded-full overflow-hidden">
-                    <img
-                      class="block size-full object-cover"
-                      src="/frontend/public/img/Profile-IG.jpg"
-                      alt="user"
-                    />
-                  </div>
-                  <span class="text-[14px] font-semibold text-slate-600"
-                    >John Doe</span
-                  >
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                >
-                  XII IPA 1
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                >
-                  john.doe@example.com
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-sm font-semibold text-slate-500"
-                >
-                  081234567890
-                </td>
-                <td
-                  class="py-4 px-4 border-b text-center text-md font-semibold text-slate-500"
-                >
-                  Lunas
-                </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
         </div>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="/frontend/logic/dashboard.js"></script>
   </body>
 </html>
