--- a/frontend/pages/admin/masterData.html
+++ b/frontend/pages/admin/masterData.html
@@ -17,18 +17,20 @@
       <div class="relative bg-slate-700 w-full h-[275px]">
         <a
           href="/frontend/pages/admin/dashboard.html"
-          class="absolute top-8 left-16 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
+          class="absolute top-8 xl:left-16 left-6 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
           >Kembali</a
         >
 
         <div
-          class="flex gap-6 items-center justify-start absolute top-32 left-16 text-slate-200"
+          class="flex gap-6 items-center justify-start absolute xl:top-32 top-28 xl:left-16 left-6 text-slate-200 xl:px-0 px-4"
         >
-          <i class="fa-solid fa-database text-6xl"></i>
+          <i class="fa-solid fa-database xl:text-6xl text-5xl"></i>
 
-          <div>
-            <h1 class="text-xl font-semibold">Halaman Master Data</h1>
-            <p class="text-sm text-slate-400 mt-1">
+          <div class="">
+            <h1 class="xl:text-xl text-lg font-semibold">
+              Halaman Master Data
+            </h1>
+            <p class="xl:text-sm text-xs text-slate-400 mt-1">
               Menambahkan, Merubah, dan Menghapus Data Kelas dan Tahun Pelajaran
               <br />
               SMA Wahidiyah Kota Lumajang
@@ -37,7 +39,7 @@
         </div>
 
         <div
-          class="flex justify-between gap-3 items-center container max-w-3xl absolute left-1/2 -translate-x-1/2 translate-y-1/2 top-14 bg-slate-200 px-4 py-2 rounded-lg shadow-lg"
+          class="flex xl:flex-row flex-col justify-between gap-3 items-center container xl:max-w-3xl w-[90%] absolute left-1/2 -translate-x-1/2 xl:translate-y-1/2 translate-y-1/4 top-14 bg-slate-200 px-4 py-2 rounded-lg shadow-lg"
         >
           <!-- Form Tambah Tahun Pelajaran -->
           <div class="bg-slate-200 w-full">
