--- a/frontend/pages/admin/nomorRekening.html
+++ b/frontend/pages/admin/nomorRekening.html
@@ -12,7 +12,7 @@
       <div class="relative bg-slate-700 w-full h-[275px]">
         <div
           id="popup-update-nomor-rekening"
-          class="w-[35%] h-[45dvh] absolute top-1/4 left-[40%] -translate-x-1/4 bg-slate-200 rounded-2xl z-40 px-8 py-10 flex-col justify-center shadow-md hidden"
+          class="xl:w-[35%] w-[90%] xl:h-[45dvh] h-[60dvh] absolute xl:top-1/4 xl:left-[40%] top-1/2 left-1/2 xl:-translate-x-1/4 -translate-x-1/2 bg-slate-200 rounded-2xl z-40 px-8 py-10 flex-col justify-center shadow-md hidden"
         >
           <button
             id="close-popup"
@@ -60,7 +60,7 @@
               <div
                 class="flex flex-row-reverse justify-end items-center gap-2 py-2 w-fit"
               >
-                <label for="status" class="text-sm text-slate-700 font-medium"
+                <!-- <label for="status" class="text-sm text-slate-700 font-medium"
                   >Status ( <span class="text-emerald-500">Aktif</span> )</label
                 >
                 <div class="size-6 overflow-hidden rounded-full">
@@ -70,7 +70,7 @@
                     id="status"
                     class="block size-full bg-slate-300 scale-125"
                   />
-                </div>
+                </div> -->
               </div>
 
               <div class="flex gap-4">
@@ -79,7 +79,7 @@
                     type="submit"
                     class="w-full bg-red-600 text-white rounded-md px-4 py-2 cursor-pointer transition-all duration-150 hover:bg-red-800 font-semibold"
                   >
-                    Hapus Rekening
+                    Hapus
                   </button>
                 </form>
                 <form id="form-update-nomor-rekening" class="w-full block">
@@ -96,31 +96,39 @@
         </div>
         <a
           href="/frontend/pages/admin/dashboard.html"
-          class="absolute top-8 left-16 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
+          class="absolute top-8 xl:left-16 left-6 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
           >Kembali</a
         >
 
-        <div class="flex gap-6 items-center absolute top-28 left-16">
-          <i class="fa-solid fa-money-check-dollar text-6xl text-slate-100"></i>
+        <div class="flex gap-6 items-center absolute top-28 xl:left-16 left-6">
+          <i
+            class="fa-solid fa-money-check-dollar xl:text-6xl text-5xl text-slate-100"
+          ></i>
           <div>
-            <h1 class="text-slate-100 font-semibold text-3xl capitalize">
+            <h1
+              class="text-slate-100 font-semibold xl:text-3xl text-xl capitalize"
+            >
               Rekening Admin
             </h1>
-            <p class="text-slate-300 font-normal text-sm capitalize mt-1">
+            <p
+              class="text-slate-300 font-normal xl:text-sm text-xs capitalize mt-1"
+            >
               SMA Wahidiyah Lumajang
             </p>
           </div>
         </div>
 
-        <div class="absolute top-42 left-1/2 -translate-x-1/2 w-5/6">
+        <div class="absolute top-42 left-1/2 -translate-x-1/2 xl:w-5/6 w-[90%]">
           <div
-            class="overflow-x-auto max-w-1/2 mx-auto my-10 rounded-l-lg rounded-r-lg shadow-md"
+            class="overflow-x-auto xl:max-w-1/2 w-full mx-auto my-10 rounded-l-lg rounded-r-lg shadow-md"
           >
             <form id="form-nomor-rekening">
               <div
                 class="flex items-center justify-between gap-2 w-full bg-slate-100 py-1 px-2 rounded-tl-lg rounded-tr-lg shadow-md"
               >
-                <div class="w-full flex gap-4 items-center justify-start">
+                <div
+                  class="w-full flex xl:flex-row flex-col xl:gap-4 gap-5 items-center justify-start"
+                >
                   <div class="flex gap-3 items-center justify-start w-full">
                     <label
                       for="atas-nama"
@@ -160,7 +168,7 @@
                 <div>
                   <button
                     type="submit"
-                    class="bg-slate-700 px-3 py-3 rounded-md font-medium capitalize text-slate-100 hover:bg-slate-500 transition-all duration-150 text-xs"
+                    class="bg-slate-700 px-3 py-3 xl:rounded-md rounded-full font-medium capitalize text-slate-100 hover:bg-slate-500 transition-all duration-150 text-xs"
                   >
                     tambahkan
                   </button>
@@ -171,9 +179,21 @@
             <table class="table-auto min-w-full bg-white">
               <thead>
                 <tr class="bg-slate-500 text-slate-100">
-                  <th class="py-4 border-b text-center">Atas Nama</th>
-                  <th class="py-4 border-b text-center">Nomor Rekening</th>
-                  <th class="py-4 border-b text-center">Status</th>
+                  <th
+                    class="py-4 border-b text-center xl:text-md text-sm xl:font-medium font-normal"
+                  >
+                    Atas Nama
+                  </th>
+                  <th
+                    class="py-4 border-b text-center xl:text-md text-sm xl:font-medium font-normal"
+                  >
+                    Nomor Rekening
+                  </th>
+                  <th
+                    class="py-4 border-b text-center xl:text-md text-sm xl:font-medium font-normal"
+                  >
+                    Status
+                  </th>
                 </tr>
               </thead>
               <tbody></tbody>
