--- a/frontend/pages/admin/tambah_siswa.html
+++ b/frontend/pages/admin/tambah_siswa.html
@@ -10,16 +10,18 @@
     <div class="min-h-screen bg-slate-200">
       <div class="bg-slate-700 relative h-[275px]">
         <a
-          class="absolute top-8 left-14 bg-slate-100 px-4 py-2 rounded-lg font-semibold text-sm text-slate-700 cursor-pointer transition-all duration-150 hover:bg-slate-200"
+          class="absolute top-8 xl:left-14 left-6 bg-slate-100 px-4 py-2 rounded-lg font-semibold text-sm text-slate-700 cursor-pointer transition-all duration-150 hover:bg-slate-200"
           href="/frontend//pages/admin/dashboard.html"
           >Kembali</a
         >
 
         <div
-          class="container max-w-6xl absolute left-1/2 -bottom-28 -translate-x-1/2 translate-y-1/2 bg-slate-200 rounded-lg shadow-lg px-10 py-6"
+          class="container xl:max-w-6xl w-[96%] absolute left-1/2 xl:-bottom-28 -bottom-20 -translate-x-1/2 translate-y-1/2 bg-slate-200 rounded-lg shadow-lg xl:px-10 px-8 py-6"
         >
           <div>
-            <h1 class="text-slate-700 font-semibold capitalize text-xl">
+            <h1
+              class="text-slate-700 font-semibold capitalize xl:text-xl text-lg"
+            >
               tambah siswa
             </h1>
             <p class="text-slate-500 font-normal capitalize text-xs">
@@ -33,9 +35,9 @@
             class="flex justify-start items-start gap-4 my-3"
           >
             <div
-              class="my-10 w-1/4 flex flex-col justify-center items-center gap-4"
+              class="xl:my-10 my-5 w-1/4 flex flex-col justify-center items-center xl:gap-4 gap-5"
             >
-              <div class="size-36 rounded-full overflow-hidden">
+              <div class="xl:size-36 size-16 rounded-full overflow-hidden">
                 <img
                   class="block size-full object-cover"
                   src="/frontend/public/img/default-profile.jpeg"
@@ -44,12 +46,12 @@
                 />
               </div>
               <label
-                class="text-sm text-slate-600 font-semibold cursor-pointer"
+                class="text-sm text-slate-200 px-1 py-1 rounded-md bg-slate-600 font-semibold cursor-pointer"
                 for="image"
                 >Pilih Foto</label
               >
               <input
-                class="w-28 block bg-slate-700 px-3 py-2 rounded-lg font-normal text-sm text-slate-100 cursor-pointer transition-all duration-150 hover:bg-slate-500"
+                class="w-28 xl:block hidden bg-slate-700 px-3 py-2 rounded-lg font-normal text-sm text-slate-100 cursor-pointer transition-all duration-150 hover:bg-slate-500"
                 type="file"
                 accept="image/*"
               />
@@ -140,6 +142,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/frontend/features/imageProfile/changeProfileUser.js"></script>
     <script type="module" src="/frontend/logic/tambahSiswa.js"></script>
   </body>
