--- a/frontend/pages/user/cek_tagihan.html
+++ b/frontend/pages/user/cek_tagihan.html
@@ -12,23 +12,30 @@
       <div class="relative w-full h-56 bg-slate-700">
         <a
           href="/frontend/pages/user/dashboard_user.html"
-          class="absolute top-8 left-16 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
+          class="absolute top-8 xl:left-16 left-6 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
           >Kembali</a
         >
 
-        <div class="flex gap-6 items-center absolute top-28 left-16">
-          <i class="fa-solid fa-chart-line text-slate-100 text-6xl"></i>
+        <div class="flex gap-6 items-center absolute top-28 xl:left-16 left-6">
+          <i
+            class="fa-solid fa-chart-line text-slate-100 xl:text-6xl text-5xl"
+          ></i>
           <div>
-            <h1 class="text-slate-100 font-semibold text-3xl capitalize">
+            <h1
+              class="text-slate-100 font-semibold xl:text-3xl text-xl capitalize"
+            >
               cek tagihan
             </h1>
-            <p class="text-slate-300 font-normal text-sm capitalize mt-1">
-              arjun samudera ahli fikri
+            <p
+              id="about-user"
+              class="text-slate-300 font-normal text-sm capitalize mt-1"
+            >
+              ...
             </p>
           </div>
         </div>
 
-        <div class="absolute top-42 left-1/2 -translate-x-1/2 w-5/6">
+        <div class="absolute top-42 left-1/2 -translate-x-1/2 xl:w-5/6 w-full">
           <div
             class="overflow-x-auto max-w-11/12 mx-auto my-10 rounded-l-lg rounded-r-lg shadow-md"
           >
@@ -39,7 +46,10 @@
                     <th class="py-4 px-4 border-b text-left">
                       Informasi Pembayaran
                     </th>
-                    <th class="py-4 px-4 border-b text-left">Nominal</th>
+                    <th class="py-4 px-4 border-b text-center">
+                      Rekening Tujuan
+                    </th>
+                    <th class="py-4 px-4 border-b text-center">Nominal</th>
                     <th class="py-4 px-4 border-b text-center">
                       Status Pembayaran
                     </th>
