--- a/frontend/pages/user/konfirmasi_pembayaran.html
+++ b/frontend/pages/user/konfirmasi_pembayaran.html
@@ -11,12 +11,12 @@
     <div class="min-h-screen overflow-hidden">
       <div class="relative w-full h-56 bg-slate-700">
         <a
-          href="/frontend/pages/user/dashboard_user.html"
-          class="absolute top-8 left-16 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
+          href="/frontend/pages/user/cek_tagihan.html"
+          class="absolute top-8 xl:left-16 left-6 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
           >Kembali</a
         >
         <div
-          class="absolute left-1/2 -translate-x-1/2 translate-y-1/4 -bottom-[270px] container max-w-2xl bg-slate-100 px-6 py-4 rounded-lg shadow-lg"
+          class="absolute left-1/2 -translate-x-1/2 xl:translate-y-1/4 translate-y-1/3 -bottom-[270px] container xl:max-w-2xl w-[90%] bg-slate-100 px-6 py-4 rounded-lg shadow-lg"
         >
           <div class="text-left">
             <h1 class="capitalize text-lg font-semibold text-slate-700">
