--- a/frontend/pages/admin/buat_tagihan.html
+++ b/frontend/pages/admin/buat_tagihan.html
@@ -16,7 +16,7 @@
     <div class="min-h-screen bg-slate-100">
       <div class="relative bg-slate-700 w-full h-[275px]">
         <a
-          href="/frontend/pages/admin/dashboard.html"
+          href="/frontend/pages/admin/opsiTagihan.html"
           class="absolute top-8 xl:left-16 left-8 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
           >Kembali</a
         >
@@ -82,8 +82,64 @@
                   ></select>
                 </div>
 
-                <div class="flex flex-col space-y-2 w-full">
-                  <div class="flex gap-4 items-center justify-start">
+                <label for="jumlah-tagihan">Jumlah Tagihan :</label>
+
+                <div class="overflow-y-auto">
+                  <div class="flex flex-col space-y-4 w-fit">
+                    <div class="flex items-center gap-x-4 w-full">
+                      <div
+                        id="nominal-spp"
+                        class="text-slate-100 text-center px-4 py-6 rounded-sm shadow cursor-pointer transition-all duration-150 hover:bg-slate-500 scale-90 bg-slate-500"
+                      >
+                        <i class="fa-solid fa-money-bill-wave text-3xl"></i>
+                        <h4
+                          class="text-sm font-medium mt-2"
+                          data-realnominal="50000"
+                        >
+                          Rp50.000,00
+                        </h4>
+                      </div>
+                      <div
+                        id="nominal-spp"
+                        class="text-slate-100 text-center bg-slate-700 px-4 py-6 rounded-sm shadow cursor-pointer transition-all duration-150 hover:bg-slate-500"
+                      >
+                        <i class="fa-solid fa-money-bill-wave text-3xl"></i>
+                        <h4
+                          class="text-sm font-medium mt-2"
+                          data-realnominal="100000"
+                        >
+                          Rp100.000,00
+                        </h4>
+                      </div>
+                      <div
+                        id="nominal-spp"
+                        class="text-slate-100 text-center bg-slate-700 px-4 py-6 rounded-sm shadow cursor-pointer transition-all duration-150 hover:bg-slate-500"
+                      >
+                        <i class="fa-solid fa-money-bill-wave text-3xl"></i>
+                        <h4
+                          class="text-sm font-medium mt-2"
+                          data-realnominal="150000"
+                        >
+                          Rp150.000,00
+                        </h4>
+                      </div>
+                      <div
+                        id="nominal-spp"
+                        class="text-slate-100 text-center bg-slate-700 px-4 py-6 rounded-sm shadow cursor-pointer transition-all duration-150 hover:bg-slate-500"
+                      >
+                        <i class="fa-solid fa-money-bill-wave text-3xl"></i>
+                        <h4
+                          class="text-sm font-medium mt-2"
+                          data-realnominal="200000"
+                        >
+                          Rp200.000,00
+                        </h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- <div class="flex flex-col space-y-2 w-full">
+                  <div class="flex gap  -4 items-center justify-start">
                     <label for="jumlah-tagihan">Jumlah Tagihan :</label>
                     <span
                       id="rupiah"
@@ -97,7 +153,7 @@
                     id="jumlah-tagihan-siswa"
                     class="border-none outline-none py-2 bg-slate-300 text-slate-700 rounded-md px-3"
                   />
-                </div>
+                </div> -->
 
                 <div class="flex flex-col space-y-2 w-full">
                   <label for="opsi-rekening">Rekening Tujuan</label>
