--- a/frontend/pages/auth/login.html
+++ b/frontend/pages/auth/login.html
@@ -21,11 +21,10 @@
             <div class="overflow-hidden size-16">
               <img
                 class="block object-cover size-full"
-                src="/frontend/public/img/smawa-logo-transparent.png"
+                src="../../public/img/smawa-logo-transparent.png"
                 alt="smawa-logo-transparent"
               />
             </div>
-
             <div class="">
               <h1 class="font-semibold text-md text-slate-800">
                 SMA Wahidiyah Lumajang
