complete : build UI pusat informasi SMA Wahidiyah Kota Lumajang (halaman admin & siswa)

--- a/frontend/pages/admin/dashboard.html
+++ b/frontend/pages/admin/dashboard.html
@@ -267,6 +267,114 @@
           </table>
         </div>
       </div>
+      <div id="information-center" class="mt-48 max-w-9/12 mx-auto">
+        <section class="text-center">
+          <h1 class="my-2 text-center font-semibold text-slate-600 text-2xl">
+            Media Informasi SMA Wahidiyah Kota Lumajang
+          </h1>
+          <p class="capitalize text-center text-slate-500 font-normal text-xs">
+            apapun seputar informasi dan berita terkini di SMA wahidiyah kota
+            lumajang bisa kamu lihat disini
+          </p>
+        </section>
+
+        <section
+          id="about-smawa-kota-lumajang"
+          class="relative min-h-[452px] bg-transparent after:content-[''] after:animate-spotlight-after after:text-red-500 after:absolute after:top-3/4 after:right-1/4 after:size-56 after:rounded-full after:bg-emerald-400 after:blur-3xl before:content-[''] before:animate-spotlight-bef before:absolute before:left-0 before:bottom-0 before:size-56 before:rounded-full before:bg-emerald-400 before:blur-3xl before:shadow-2xl before:shadow-emerald-300 before:text-slate-100 mt-10"
+        >
+          <div
+            class="w-full flex justify-center items-start gap-x-10 absolute top-3/4 left-1/2 -translate-x-1/2 -translate-y-3/4 z-30"
+          >
+            <div class="w-fit">
+              <h1 class="capitalize text-slate-700 font-semibold text-xl my-3">
+                about SMA Wahidiyah Kota Lumajang
+              </h1>
+
+              <img
+                src="/frontend/public/img/Smawa.jpg"
+                alt="sma wahidiyah kota lumajang"
+                class="block w-[450px] h-[325px] object-cover rounded-lg shadow-lg"
+              />
+            </div>
+
+            <div class="w-1/2 mt-14">
+              <h1 class="font-semibold text-slate-700 text-xl capitalize">
+                profil SMA wahidiyah kota lumajang
+              </h1>
+
+              <p class="text-slate-500 font-normal text-xs capitalize mt-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatem in maxime eaque doloribus dicta necessitatibus labore
+                ad. Pariatur debitis perspiciatis ducimus laudantium omnis,
+                aspernatur quam odit voluptate perferendis commodi autem eius
+                distinctio voluptas qui iure dolore vero quos ipsam aliquam
+                necessitatibus fugiat dolorem a doloremque in. Omnis ipsa nulla,
+                eligendi ipsam voluptatibus aliquam laborum itaque, facilis non
+                sequi soluta. Similique itaque porro ex, quam, fugit dolor
+                voluptate assumenda totam tempora laboriosam asperiores odio
+                consequatur id placeat maiores repellendus aut distinctio enim
+                aspernatur consequuntur debitis ut nostrum numquam explicabo!
+                Architecto nostrum similique perferendis molestiae ipsa
+                cupiditate minus animi perspiciatis adipisci nulla!
+              </p>
+
+              <a
+                href="https://youtube.com"
+                class="block w-fit text-slate-100 bg-red-500 px-4 py-2 rounded-lg shadow font-medium text-sm cursor-pointer hover:bg-red-700 mt-5"
+                ><i class="fa-brands fa-youtube pr-3"></i> Kunjungi Sekarang</a
+              >
+            </div>
+          </div>
+        </section>
+
+        <section class="max-w-11/12 my-48 mx-auto">
+          <h1
+            class="text-slate-700 font-semibold text-3xl capitalize text-center"
+          >
+            informasi terkini
+          </h1>
+
+          <ul class="flex flex-wrap justify-center items-center gap-6 mt-14">
+            <li class="max-w-[400px] overflow-hidden rounded-lg shadow">
+              <div class="relative w-full overflow-hidden">
+                <img
+                  class="block size-full object-cover"
+                  src="/frontend/public/img/walpaper-laptop.jpg"
+                  alt="informasi"
+                />
+              </div>
+
+              <div class="relative py-3 px-4">
+                <button
+                  type="button"
+                  class="absolute bg-slate-100 shadow-lg z-20 -top-5 left-5 px-5 py-2 rounded-full text-sm font-medium cursor-pointer hover:bg-red-500 hover:text-slate-100 transition-all duration-150 group"
+                >
+                  <i
+                    class="fa-regular fa-heart pr-2 text-red-500 text-lg group-hover:text-slate-100 group-hover:scale-125 transition-all duration-150"
+                  ></i>
+                  17 disukai
+                </button>
+
+                <h1 class="capitalize text-lg font-medium text-slate-600 mt-4">
+                  definisi teknik membaca scanning
+                </h1>
+                <p class="capitalize text-xs font-normal text-slate-500 mt-1">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Officia esse consequatur molestias voluptas veniam nobis ad.
+                  Quam error ducimus non, perferendis reiciendis, fuga deleniti
+                  dicta nobis ipsam reprehenderit laudantium. Amet!
+                </p>
+                <button
+                  type="button"
+                  class="w-full mt-4 bg-slate-700 px-3 py-2 font-medium text-slate-200 rounded-md text-sm cursor-pointer hover:bg-slate-900"
+                >
+                  Baca Sekarang
+                </button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
