--- a/frontend/pages/admin/pantau_siswa.html
+++ b/frontend/pages/admin/pantau_siswa.html
@@ -241,7 +241,7 @@
               <tbody></tbody>
             </table>
 
-            <div class="">
+            <div class="size-0 overflow-hidden">
               <table id="table-hidden" class="">
                 <thead>
                   <tr>
