--- a/frontend/pages/admin/opsiTagihan.html
+++ b/frontend/pages/admin/opsiTagihan.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="/frontend/styles/output.css" />
   </head>
   <body>
-    <div class="min-h-screen overflow-hidden">
+    <div class="relative min-h-screen overflow-hidden">
+      <a
+        href="/frontend/pages/admin/dashboard.html"
+        class="absolute top-8 left-14 rounded-md text-slate-200 bg-slate-700 font-medium px-4 py-2 cursor-pointer hover:bg-slate-900 transition-all duration-150 ease-in-out"
+        >Kembali</a
+      >
       <div
         class="container mx-auto bg-white h-screen flex flex-col justify-center items-center"
       >
