--- a/frontend/pages/user/cek_tagihan.html
+++ b/frontend/pages/user/cek_tagihan.html
@@ -51,6 +51,10 @@
                     </th>
                     <th class="py-4 px-4 border-b text-center">Nominal</th>
                     <th class="py-4 px-4 border-b text-center">
+                      Tipe Pembayaran
+                    </th>
+
+                    <th class="py-4 px-4 border-b text-center">
                       Status Pembayaran
                     </th>
                   </tr>
