--- a/frontend/pages/admin/buat_tagihan.html
+++ b/frontend/pages/admin/buat_tagihan.html
@@ -13,15 +13,42 @@
     <script src="/frontend/node_modules/flatpickr/dist/flatpickr.min.js"></script>
   </head>
   <body>
-    <div class="min-h-screen bg-slate-100">
+    <div class="min-h-fit bg-slate-100">
       <div class="relative bg-slate-700 w-full h-[275px]">
         <a
           href="/frontend/pages/admin/opsiTagihan.html"
           class="absolute top-8 xl:left-16 left-8 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
           >Kembali</a
         >
+
         <div
-          class="container xl:max-w-3xl w-[96%] absolute left-1/2 -translate-x-1/2 translate-y-3/4 -bottom-16 bg-slate-100 px-8 py-6 rounded-lg shadow-lg"
+          class="absolute top-8 right-10 flex flex-col justify-center items-end gap-4"
+        >
+          <a
+            href="/frontend/pages/admin/pendaftaranSiswa.html"
+            class="flex items-center gap-x-2 bg-slate-200 text-slate-700 font-medium px-4 py-3 rounded-md text-sm cursor-pointer transition-all duration-150 hover:bg-slate-100"
+          >
+            Pendaftaran Siswa Kelas 10
+            <i class="fa-solid fa-address-book text-2xl"></i>
+          </a>
+          <a
+            href="/frontend/pages/admin/pendaftaranUlang.html"
+            class="flex items-center gap-x-2 bg-slate-200 text-slate-700 font-medium px-4 py-3 rounded-md text-sm cursor-pointer transition-all duration-150 hover:bg-slate-100"
+          >
+            Pendaftaran Ulang Siswa Kelas 11
+            <i class="fa-solid fa-address-book text-2xl"></i>
+          </a>
+          <a
+            href="/frontend/pages/admin/buat_tagihan.html"
+            class="flex items-center gap-x-2 bg-slate-200 text-slate-700 font-medium px-4 py-3 rounded-md text-sm cursor-pointer transition-all duration-150 hover:bg-slate-100"
+          >
+            Pembayaran SPP
+            <i class="fa-solid fa-cash-register text-2xl"></i>
+          </a>
+        </div>
+
+        <div
+          class="container xl:max-w-3xl w-[96%] absolute left-1/2 -translate-x-1/2 xl:translate-y-[65%] translate-y-3/4 -bottom-16 bg-slate-100 px-8 py-6 rounded-lg shadow-lg xl:scale-90"
         >
           <div class="w-full">
             <h1
