--- a/frontend/pages/admin/pantau_siswa.html
+++ b/frontend/pages/admin/pantau_siswa.html
@@ -11,11 +11,11 @@
   </head>
 
   <body>
-    <div class="min-h-screen bg-slate-100">
+    <div class="min-h-fit bg-slate-100">
       <div class="relative bg-slate-700 w-full h-[275px]">
         <div
           id="popup-update-siswa"
-          class="xl:w-[35%] w-[95%] h-fit absolute xl:top-3/4 top-1/4 xl:left-[40%] left-1/2 xl:-translate-x-1/4 -translate-x-1/2 bg-slate-200 rounded-2xl z-40 px-8 xl:py-7 py-5 flex-col justify-center shadow-md hidden"
+          class="2xl:w-[35%] xl:w-[45%] w-[95%] h-fit fixed 2xl:top-1/4 xl:top-28 top-1/4 xl:left-[40%] left-1/2 xl:-translate-x-1/4 -translate-x-1/2 bg-slate-200 rounded-2xl z-40 px-8 xl:py-7 py-5 flex-col justify-center shadow-md hidden"
         >
           <button
             id="close-popup"
@@ -25,7 +25,7 @@
             X
           </button>
 
-          <div class="flex gap-4 items-center justify-start my-4">
+          <div class="relative flex gap-4 items-center justify-start my-4">
             <i class="fa-solid fa-file-pen text-4xl text-slate-700"></i>
             <div>
               <h1 class="font-medium text-xl text-slate-700">
@@ -35,6 +35,12 @@
                 SMA Wahidiyah Kota Lumajang
               </p>
             </div>
+
+            <a
+              class="absolute top-0 right-0 px-4 py-3 rounded-lg font-medium text-slate-200 text-sm bg-slate-700 cursor-pointer transition-all duration-150 hover:bg-slate-500"
+              id="payment-via-admin"
+              >Pembayaran Via Admin ?</a
+            >
           </div>
           <div>
             <div
@@ -141,18 +147,20 @@
           </div>
         </div>
 
-        <div class="absolute top-42 left-1/2 -translate-x-1/2 xl:w-5/6 w-full">
+        <div
+          class="absolute top-42 left-1/2 -translate-x-1/2 2xl:w-5/6 xl:w-full w-full"
+        >
           <div
             class="overflow-x-auto max-w-11/12 mx-auto my-10 rounded-l-lg rounded-r-lg shadow-md"
           >
             <div
               class="flex xl:flex-row flex-col gap-3 bg-slate-100 xl:w-fit w-full px-2 py-3 rounded-tl-lg rounded-tr-lg shadow-md"
             >
-              <div>
+              <div class="grid place-items-center">
                 <input
                   type="text"
                   placeholder="Cari Siswa..."
-                  class="block px-3 py-2 rounded-md bg-slate-300 text-sm outline-slate-600/50 border-none xl:w-[275px] w-full"
+                  class="block px-3 py-2 rounded-md bg-slate-300 text-sm outline-slate-600/50 border-none xl:w-[275px] w-full h-10"
                   id="search-student"
                 />
               </div>
