--- a/frontend/pages/admin/pendaftaranSiswa.html
+++ b/frontend/pages/admin/pendaftaranSiswa.html
@@ -9,8 +9,40 @@
   </head>
   <body>
     <div
-      class="flex items-center bg-slate-100 min-h-screen w-full overflow-hidden"
+      class="relative flex items-center bg-slate-100 min-h-screen w-full overflow-hidden"
     >
+      <a
+        href="/frontend/pages/admin/opsiTagihan.html"
+        class="absolute top-8 left-14 rounded-md text-slate-200 bg-slate-700 font-medium px-4 py-2 cursor-pointer hover:bg-slate-900 transition-all duration-150"
+        >Kembali</a
+      >
+
+      <div
+        class="absolute top-8 right-10 flex flex-col justify-center items-end gap-4"
+      >
+        <a
+          href="/frontend/pages/admin/pendaftaranSiswa.html"
+          class="flex items-center gap-x-2 bg-slate-700 text-slate-100 px-4 py-3 rounded-md text-sm cursor-pointer transition-all duration-150 hover:bg-slate-500"
+        >
+          Pendaftaran Siswa Kelas 10
+          <i class="fa-solid fa-address-book text-2xl"></i>
+        </a>
+        <a
+          href="/frontend/pages/admin/pendaftaranUlang.html"
+          class="flex items-center gap-x-2 bg-slate-700 text-slate-100 px-4 py-3 rounded-md text-sm cursor-pointer transition-all duration-150 hover:bg-slate-500"
+        >
+          Pendaftaran Ulang Siswa Kelas 11
+          <i class="fa-solid fa-address-book text-2xl"></i>
+        </a>
+        <a
+          href="/frontend/pages/admin/buat_tagihan.html"
+          class="flex items-center gap-x-2 bg-slate-700 text-slate-100 px-4 py-3 rounded-md text-sm cursor-pointer transition-all duration-150 hover:bg-slate-500"
+        >
+          Pembayaran SPP
+          <i class="fa-solid fa-cash-register text-2xl"></i>
+        </a>
+      </div>
+
       <div class="container h-screen mx-auto overflow-hidden bg-slate-100">
         <div class="h-screen flex justify-center items-center">
           <div
