--- a/frontend/pages/user/konfirmasi_pembayaran.html
+++ b/frontend/pages/user/konfirmasi_pembayaran.html
@@ -11,7 +11,7 @@
     <div class="min-h-screen overflow-hidden">
       <div class="relative w-full h-56 bg-slate-700">
         <a
-          href="/frontend/pages/user/cek_tagihan.html"
+          id="prev_page"
           class="absolute top-8 xl:left-16 left-6 px-4 py-2 rounded-md bg-slate-100 text-slate-700 hover:bg-slate-500 hover:text-slate-100 transition-all duration-150 font-semibold"
           >Kembali</a
         >
